k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: oa-ui-service
spec:
  clusterIP: None 
  selector:
    app: uat-oa-ui
    environment: qa
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: myapp-http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uat-oa-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip                 #跳转后端时忽略 path
    traefik.ingress.kubernetes.io/frontend-entry-points: http   #指定只能以 http，方式访问，也可以设置 https
spec:
  rules:
  - host: uat-oa.izehui.local
    http:
      paths:
      - path:  
        backend:
          serviceName: oa-ui-service
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uat-oa-ui
  labels:
    app: uat-oa-ui
    environment: qa
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uat-oa-ui
      environment: qa
      tier: frontend
  template:
    metadata:
      labels:
        app: uat-oa-ui
        environment: qa
        tier: frontend    
    spec:
      containers:
      - image: harbor.izehui.local/dev/nginx:<BUILD_TAG>
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP

        - mountPath: /etc/nginx/conf.d/default.conf
          name: oa-ui-confginmap
          subPath: default.conf
          readOnly: true
          
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: oa-ui-volume


      volumes:
      - name: oa-ui-confginmap 
        configMap:
          name: oa-ui-confginmap
